--- a/src/app/components/thoughts/create-thought/create-thought.component.html
+++ b/src/app/components/thoughts/create-thought/create-thought.component.html
@@ -61,7 +61,7 @@
     </div>
     <div class="acoes">
       <button (click)="createThought()" class="botao">Salvar</button>
-      <button (click)="cancelThought()" class="botao">Cancelar</button>
+      <button (click)="cancelThought()" class="botao" routerLink="/listThought">Cancelar</button>
     </div>
   </form>
 </section>
