--- a/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
+++ b/src/app/components/thoughts/list-thoughts/list-thoughts.component.html
@@ -3,4 +3,15 @@
     <h2 class="ff-inter">Meu Mural</h2>
     <button routerLink="/createThought" class="botao">Adicionar pensamento</button>
   </header>
+  <div class="mural" *ngIf="thoughtsList.length > 0, else semPensamentos">
+    <div *ngFor="let thought of thoughtsList">
+      <app-thought [pensamento]="thought"></app-thought>
+    </div>
+  </div>
 </section>
+
+<ng-template #semPensamentos>
+  <div class="ff-inter sem-pensamentos">
+    <p>Ainda não há pensamentos cadastrados!</p>
+  </div>
+</ng-template>
